{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 329,
  "lineage": "9bc34f32-3ced-dff5-2eed-6c2ed32e2b35",
  "resources": [
    {
      "module": "module.loadbalancer",
      "mode": "managed",
      "type": "aws_lb",
      "name": "load_balancer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-north-1:050451394835:loadbalancer/app/application-load-balancer/23407b18b66febc0",
            "arn_suffix": "app/application-load-balancer/23407b18b66febc0",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "application-load-balancer-242428704.eu-north-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:eu-north-1:050451394835:loadbalancer/app/application-load-balancer/23407b18b66febc0",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "application-load-balancer",
            "preserve_host_header": false,
            "security_groups": [
              "sg-04a8b68e9c13c5636"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-05f5be4293d66ab2e"
              },
              {
                "subnet_id": "subnet-079ba9ca1149d4c0c"
              },
              {
                "subnet_id": "subnet-07f7be0687e26fe13"
              }
            ],
            "subnets": [
              "subnet-05f5be4293d66ab2e",
              "subnet-079ba9ca1149d4c0c",
              "subnet-07f7be0687e26fe13"
            ],
            "tags": {
              "Name": "application-load-balancer"
            },
            "tags_all": {
              "Name": "application-load-balancer"
            },
            "vpc_id": "vpc-0b147ac12ea2debb6",
            "xff_header_processing_mode": "append",
            "zone_id": "Z23TAZ6LKFMNIO"
          },
          "dependencies": [
            "module.networking.aws_subnet.public_subnets",
            "module.networking.aws_vpc.main",
            "module.security.aws_security_group.load_balancer_sg"
          ]
        }
      ]
    },
    {
      "module": "module.loadbalancer",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-north-1:050451394835:listener/app/application-load-balancer/23407b18b66febc0/5651e94fd54c3962",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-north-1:050451394835:targetgroup/lg-target/a868f894338c4f34",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-north-1:050451394835:listener/app/application-load-balancer/23407b18b66febc0/5651e94fd54c3962",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-north-1:050451394835:loadbalancer/app/application-load-balancer/23407b18b66febc0",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": false,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {
              "Name": "application-load-balancer listener"
            },
            "tags_all": {
              "Name": "application-load-balancer listener"
            },
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.loadbalancer.aws_lb.load_balancer",
            "module.loadbalancer.aws_lb_target_group.lg_target",
            "module.networking.aws_subnet.public_subnets",
            "module.networking.aws_vpc.main",
            "module.security.aws_security_group.load_balancer_sg"
          ]
        }
      ]
    },
    {
      "module": "module.loadbalancer",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "lg_target",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-north-1:050451394835:targetgroup/lg-target/a868f894338c4f34",
            "arn_suffix": "targetgroup/lg-target/a868f894338c4f34",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200-299",
                "path": "/health.html",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-north-1:050451394835:targetgroup/lg-target/a868f894338c4f34",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "lg-target",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "target group for application load balancer"
            },
            "tags_all": {
              "Name": "target group for application load balancer"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0b147ac12ea2debb6"
          },
          "dependencies": [
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.natgateway",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_gateway_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0cc9c7144c283bbd7",
            "arn": "arn:aws:ec2:eu-north-1:050451394835:elastic-ip/eipalloc-0cc9c7144c283bbd7",
            "domain": "vpc",
            "id": "eipalloc-0cc9c7144c283bbd7",
            "network_border_group": "eu-north-1",
            "public_dns": "ec2-13-50-80-214.eu-north-1.compute.amazonaws.com",
            "public_ip": "13.50.80.214",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "NAT-gateway-elasticIP 1"
            },
            "tags_all": {
              "Name": "NAT-gateway-elasticIP 1"
            },
            "vpc": true
          },
          "dependencies": [
            "module.networking.aws_subnet.public_subnets",
            "module.networking.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ca484f8698d47c74",
            "arn": "arn:aws:ec2:eu-north-1:050451394835:elastic-ip/eipalloc-0ca484f8698d47c74",
            "domain": "vpc",
            "id": "eipalloc-0ca484f8698d47c74",
            "network_border_group": "eu-north-1",
            "public_dns": "ec2-51-21-120-51.eu-north-1.compute.amazonaws.com",
            "public_ip": "51.21.120.51",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "NAT-gateway-elasticIP 2"
            },
            "tags_all": {
              "Name": "NAT-gateway-elasticIP 2"
            },
            "vpc": true
          },
          "dependencies": [
            "module.networking.aws_subnet.public_subnets",
            "module.networking.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-06e8a6e3122951aec",
            "arn": "arn:aws:ec2:eu-north-1:050451394835:elastic-ip/eipalloc-06e8a6e3122951aec",
            "domain": "vpc",
            "id": "eipalloc-06e8a6e3122951aec",
            "network_border_group": "eu-north-1",
            "public_dns": "ec2-13-61-247-223.eu-north-1.compute.amazonaws.com",
            "public_ip": "13.61.247.223",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "NAT-gateway-elasticIP 3"
            },
            "tags_all": {
              "Name": "NAT-gateway-elasticIP 3"
            },
            "vpc": true
          },
          "dependencies": [
            "module.networking.aws_subnet.public_subnets",
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.natgateway",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0cc9c7144c283bbd7",
            "association_id": "eipassoc-0cfe03ffbf9997e9b",
            "connectivity_type": "public",
            "id": "nat-0eaf4fc9f97fcc77b",
            "network_interface_id": "eni-0c79256f14298f9b7",
            "private_ip": "10.0.1.75",
            "public_ip": "13.50.80.214",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-05f5be4293d66ab2e",
            "tags": {
              "Name": "NAT-gateway 1"
            },
            "tags_all": {
              "Name": "NAT-gateway 1"
            }
          },
          "dependencies": [
            "module.natgateway.aws_eip.nat_gateway_eip",
            "module.networking.aws_internet_gateway.gw",
            "module.networking.aws_subnet.public_subnets",
            "module.networking.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ca484f8698d47c74",
            "association_id": "eipassoc-0aa4ae2dcf1f183c5",
            "connectivity_type": "public",
            "id": "nat-03346c73e6c7f74a8",
            "network_interface_id": "eni-0f71064b97e4dddaa",
            "private_ip": "10.0.2.112",
            "public_ip": "51.21.120.51",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-079ba9ca1149d4c0c",
            "tags": {
              "Name": "NAT-gateway 2"
            },
            "tags_all": {
              "Name": "NAT-gateway 2"
            }
          },
          "dependencies": [
            "module.natgateway.aws_eip.nat_gateway_eip",
            "module.networking.aws_internet_gateway.gw",
            "module.networking.aws_subnet.public_subnets",
            "module.networking.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-06e8a6e3122951aec",
            "association_id": "eipassoc-025d5ce973becdc62",
            "connectivity_type": "public",
            "id": "nat-0c6e7b5266d3bb747",
            "network_interface_id": "eni-0d717a5d37d808689",
            "private_ip": "10.0.3.92",
            "public_ip": "13.61.247.223",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-07f7be0687e26fe13",
            "tags": {
              "Name": "NAT-gateway 3"
            },
            "tags_all": {
              "Name": "NAT-gateway 3"
            }
          },
          "dependencies": [
            "module.natgateway.aws_eip.nat_gateway_eip",
            "module.networking.aws_internet_gateway.gw",
            "module.networking.aws_subnet.public_subnets",
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.natgateway",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:050451394835:route-table/rtb-08434c6cca9308b07",
            "id": "rtb-08434c6cca9308b07",
            "owner_id": "050451394835",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0eaf4fc9f97fcc77b",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Private routing table 1"
            },
            "tags_all": {
              "Name": "Private routing table 1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b147ac12ea2debb6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.natgateway.aws_eip.nat_gateway_eip",
            "module.natgateway.aws_nat_gateway.nat_gateway",
            "module.networking.aws_internet_gateway.gw",
            "module.networking.aws_subnet.public_subnets",
            "module.networking.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:050451394835:route-table/rtb-08d66d465141263b6",
            "id": "rtb-08d66d465141263b6",
            "owner_id": "050451394835",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-03346c73e6c7f74a8",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Private routing table 2"
            },
            "tags_all": {
              "Name": "Private routing table 2"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b147ac12ea2debb6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.natgateway.aws_eip.nat_gateway_eip",
            "module.natgateway.aws_nat_gateway.nat_gateway",
            "module.networking.aws_internet_gateway.gw",
            "module.networking.aws_subnet.public_subnets",
            "module.networking.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:050451394835:route-table/rtb-084a38707d02ca206",
            "id": "rtb-084a38707d02ca206",
            "owner_id": "050451394835",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0c6e7b5266d3bb747",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Private routing table 3"
            },
            "tags_all": {
              "Name": "Private routing table 3"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b147ac12ea2debb6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.natgateway.aws_eip.nat_gateway_eip",
            "module.natgateway.aws_nat_gateway.nat_gateway",
            "module.networking.aws_internet_gateway.gw",
            "module.networking.aws_subnet.public_subnets",
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.natgateway",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_subnet_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-083a435201f5b3dc1",
            "route_table_id": "rtb-08434c6cca9308b07",
            "subnet_id": "subnet-034e00372fe0f8eb1"
          },
          "dependencies": [
            "module.natgateway.aws_eip.nat_gateway_eip",
            "module.natgateway.aws_nat_gateway.nat_gateway",
            "module.natgateway.aws_route_table.private_route_table",
            "module.networking.aws_internet_gateway.gw",
            "module.networking.aws_subnet.private_subnets",
            "module.networking.aws_subnet.public_subnets",
            "module.networking.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ad3395bbc12bccd4",
            "route_table_id": "rtb-08d66d465141263b6",
            "subnet_id": "subnet-0c902c6a61b4748e8"
          },
          "dependencies": [
            "module.natgateway.aws_eip.nat_gateway_eip",
            "module.natgateway.aws_nat_gateway.nat_gateway",
            "module.natgateway.aws_route_table.private_route_table",
            "module.networking.aws_internet_gateway.gw",
            "module.networking.aws_subnet.private_subnets",
            "module.networking.aws_subnet.public_subnets",
            "module.networking.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-069e57fb155a63766",
            "route_table_id": "rtb-084a38707d02ca206",
            "subnet_id": "subnet-03f904ad966f82867"
          },
          "dependencies": [
            "module.natgateway.aws_eip.nat_gateway_eip",
            "module.natgateway.aws_nat_gateway.nat_gateway",
            "module.natgateway.aws_route_table.private_route_table",
            "module.networking.aws_internet_gateway.gw",
            "module.networking.aws_subnet.private_subnets",
            "module.networking.aws_subnet.public_subnets",
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:050451394835:internet-gateway/igw-0e0f696db8325bf65",
            "id": "igw-0e0f696db8325bf65",
            "owner_id": "050451394835",
            "tags": {
              "Name": "Project VPC InternetGateway"
            },
            "tags_all": {
              "Name": "Project VPC InternetGateway"
            },
            "vpc_id": "vpc-0b147ac12ea2debb6"
          },
          "dependencies": [
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "second_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:050451394835:route-table/rtb-05f2698737933fc18",
            "id": "rtb-05f2698737933fc18",
            "owner_id": "050451394835",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0e0f696db8325bf65",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "2nd Route Table for the Internet Gateway"
            },
            "tags_all": {
              "Name": "2nd Route Table for the Internet Gateway"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b147ac12ea2debb6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_internet_gateway.gw",
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-013c2caa85b7f7708",
            "route_table_id": "rtb-05f2698737933fc18",
            "subnet_id": "subnet-05f5be4293d66ab2e"
          },
          "dependencies": [
            "module.networking.aws_internet_gateway.gw",
            "module.networking.aws_route_table.second_rt",
            "module.networking.aws_subnet.public_subnets",
            "module.networking.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e54e0035d0d52dfb",
            "route_table_id": "rtb-05f2698737933fc18",
            "subnet_id": "subnet-079ba9ca1149d4c0c"
          },
          "dependencies": [
            "module.networking.aws_internet_gateway.gw",
            "module.networking.aws_route_table.second_rt",
            "module.networking.aws_subnet.public_subnets",
            "module.networking.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0594b9bd4d8d9d212",
            "route_table_id": "rtb-05f2698737933fc18",
            "subnet_id": "subnet-07f7be0687e26fe13"
          },
          "dependencies": [
            "module.networking.aws_internet_gateway.gw",
            "module.networking.aws_route_table.second_rt",
            "module.networking.aws_subnet.public_subnets",
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:050451394835:subnet/subnet-034e00372fe0f8eb1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1a",
            "availability_zone_id": "eun1-az1",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-034e00372fe0f8eb1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "050451394835",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private Subnet 1"
            },
            "tags_all": {
              "Name": "Private Subnet 1"
            },
            "vpc_id": "vpc-0b147ac12ea2debb6"
          },
          "dependencies": [
            "module.networking.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:050451394835:subnet/subnet-0c902c6a61b4748e8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1b",
            "availability_zone_id": "eun1-az2",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c902c6a61b4748e8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "050451394835",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private Subnet 2"
            },
            "tags_all": {
              "Name": "Private Subnet 2"
            },
            "vpc_id": "vpc-0b147ac12ea2debb6"
          },
          "dependencies": [
            "module.networking.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:050451394835:subnet/subnet-03f904ad966f82867",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1c",
            "availability_zone_id": "eun1-az3",
            "cidr_block": "10.0.6.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03f904ad966f82867",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "050451394835",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private Subnet 3"
            },
            "tags_all": {
              "Name": "Private Subnet 3"
            },
            "vpc_id": "vpc-0b147ac12ea2debb6"
          },
          "dependencies": [
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:050451394835:subnet/subnet-05f5be4293d66ab2e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1a",
            "availability_zone_id": "eun1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05f5be4293d66ab2e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "050451394835",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Public Subnet 1"
            },
            "tags_all": {
              "Name": "Public Subnet 1"
            },
            "vpc_id": "vpc-0b147ac12ea2debb6"
          },
          "dependencies": [
            "module.networking.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:050451394835:subnet/subnet-079ba9ca1149d4c0c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1b",
            "availability_zone_id": "eun1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-079ba9ca1149d4c0c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "050451394835",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Public Subnet 2"
            },
            "tags_all": {
              "Name": "Public Subnet 2"
            },
            "vpc_id": "vpc-0b147ac12ea2debb6"
          },
          "dependencies": [
            "module.networking.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:050451394835:subnet/subnet-07f7be0687e26fe13",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1c",
            "availability_zone_id": "eun1-az3",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07f7be0687e26fe13",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "050451394835",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Public Subnet 3"
            },
            "tags_all": {
              "Name": "Public Subnet 3"
            },
            "vpc_id": "vpc-0b147ac12ea2debb6"
          },
          "dependencies": [
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:050451394835:vpc/vpc-0b147ac12ea2debb6",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0ced65040d0ae51d4",
            "default_route_table_id": "rtb-010b384a26f312a56",
            "default_security_group_id": "sg-02a4ff1c56a1af3c4",
            "dhcp_options_id": "dopt-0ef02d3db03a45715",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0b147ac12ea2debb6",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-010b384a26f312a56",
            "owner_id": "050451394835",
            "tags": {
              "Name": "IU scalable static site VPC"
            },
            "tags_all": {
              "Name": "IU scalable static site VPC"
            }
          }
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:050451394835:security-group/sg-0bd07af5580a26122",
            "description": "Allowing traffic from ALB to EC2 instances.",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0bd07af5580a26122",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-04a8b68e9c13c5636"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-04a8b68e9c13c5636"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "ec2_sg",
            "name_prefix": "",
            "owner_id": "050451394835",
            "revoke_rules_on_delete": true,
            "tags": {
              "Name": "EC2 security group"
            },
            "tags_all": {
              "Name": "EC2 security group"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b147ac12ea2debb6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.main",
            "module.security.aws_security_group.load_balancer_sg"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "load_balancer_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:050451394835:security-group/sg-04a8b68e9c13c5636",
            "description": "Allowing HTTP and HTTPS inbound from anywhere",
            "egress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04a8b68e9c13c5636",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "load_balancer_sg",
            "name_prefix": "",
            "owner_id": "050451394835",
            "revoke_rules_on_delete": true,
            "tags": {
              "Name": "ALB security group. Allow incoming requests to the load balancer from anywhere, limiting outbound to VPC"
            },
            "tags_all": {
              "Name": "ALB security group. Allow incoming requests to the load balancer from anywhere, limiting outbound to VPC"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b147ac12ea2debb6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    }
  ]
}